# corteva-code-challenge

./: README.md
src/weather/: pyproject.toml
src/weather/api/: settings.py  test_runner.py  urls.py
src/weather/scripts/: ingest.py
src/weather/weather_api/: models.py  serializers.py  test_support.py  tests.py  urls.py  views.py
src/weather/weather_api/migrations/: 0001_initial.py  0002_dailyweather_station_id_date_uk_and_more.py  0003_alter_dailyweather_max_temp_and_more.py
